[package]
name = "librecast"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
crossterm = "0.27.0"
curl = "0.4.46"
home = "0.5.9"
ratatui = "0.26.1"
rodio = { version = "0.17.3", features = ["symphonia-all"], default-features = false }
rss = "2.0.7"
serde = "1.0.197"
serde_json = "1.0.114"
ureq = "2.9.6"
