[package]
name = "librecast"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
clipboard = "0.5.0"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
home = "0.5.9"
url2audio = "0.2.4"
# url2audio = { path = "../url2audio" }
ratatui = "0.27.0"
rss = "2.0.7"
sea-orm = { version = "1.0.1", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros", "with-chrono"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
tui-textbox = "0.3.0"
ureq = "2.9.6"
migration = { path = "./migration" }
chrono = "0.4.38"

